[metadata]
name = srem
version = 0.1.2
description = A Simplified and Robust Surface Reflectance Estimation Method for Satellite Imagery
author = Taiki Oyama
author_email = oyamat4@gmail.com
url = https://github.com/oyam/srem
license = MIT License
classifiers =
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8

[options]
packages = find:
include_package_data = True
python_requires = >=3.5
install_requires = numpy>=1.7

[options.extras_require]
test = flake8; mypy; pytest>=5.3

[flake8]
ignore = W503
exclude = .git,__pycache__,__init__.py,examples,tests
max-complexity = 10
max-line-length = 120

[mypy]
ignore_missing_imports = True
